Update tutorial and blueprint through deployment

--- a/examples/GCP/e4s-23.11-cluster-slurm-gcp-5-9-hpc-rocky-linux-8.annotations.md
+++ b/examples/GCP/e4s-23.11-cluster-slurm-gcp-5-9-hpc-rocky-linux-8.annotations.md
@@ -1,5 +1,6 @@
 1. !!! warning
-       Ensure that this matches the name of your project on GCP
+       Either uncomment this line and ensure that this matches the name of your project on GCP,
+       or invoke `ghpc` with the `--vars project_id="${PROJECT_ID}"` flag.
 2. !!! info
        Ensure that this matches the image family from the GCP marketplace
 3. !!! danger
